Integration of my own library

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@lephenix47/color-converter": "^1.2.0",
     "@lephenix47/cookies-utility": "^1.2.0",
+    "@lephenix47/speech-to-text-utility": "^1.0.1",
     "@lephenix47/timers-utility": "^1.2.0",
     "@lephenix47/webstorage-utility": "^1.2.0"
   }
